feat(security): implement JWT token generation service with configurable properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=Lotto
 spring.security.user.name=Lukasz
 spring.security.user.password=lukasz1234@@!!--mijakotako$%^&*
+
+spring.data.mongodb.uri=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:27017/${MONGO_DATABASE}?authSource=admin
+
+
+lotto.jwt.secret=${JWT_SECRET}
+lotto.jwt.expiration-ms=${JWT_EXPIRATION_MS}
+lotto.jwt.issuer=${JWT_ISSUER}
+lotto.jwt.subject=${JWT_SUBJECT}
