feat(player): add facade and refactor controller and service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ lotto.jwt.secret=${JWT_SECRET}
 lotto.jwt.expiration-ms=${JWT_EXPIRATION_MS}
 lotto.jwt.issuer=${JWT_ISSUER}
 lotto.jwt.subject=${JWT_SUBJECT}
+
+lotto.draw.cron=0 * * * * *
+lotto.draw.min-number=1
+lotto.draw.max-number=99
+lotto.draw.count-numbers=40
+lotto.draw.count-down-seconds=35
+lotto.draw.delay-between-draw-numbers-millis=20
