--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
+server.port=0
+
 spring.application.name=Lotto
 spring.security.user.name=Lukasz
 spring.security.user.password=lukasz1234@@!!--mijakotako$%^&*
 
-spring.data.mongodb.uri=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:27017/${MONGO_DATABASE}?authSource=admin
+spring.data.mongodb.uri=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@localhost:27017/lotto?authSource=admin
 
 
 lotto.jwt.secret=${JWT_SECRET}
@@ -16,3 +18,9 @@ lotto.draw.max-number=99
 lotto.draw.count-numbers=40
 lotto.draw.count-down-seconds=35
 lotto.draw.delay-between-draw-numbers-millis=20
+# Kafka
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+
