--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,15 @@ lotto.draw.cron=0 * * * * *
 lotto.draw.min-number=1
 lotto.draw.max-number=99
 lotto.draw.count-numbers=40
-lotto.draw.count-down-seconds=35
+lotto.draw.count-down-seconds=5
 lotto.draw.delay-between-draw-numbers-millis=20
+
+
+draw.date.time.day=6
+draw.date.time.hour=12
+draw.date.time.minute=0
+draw.date.time.second=0
+
 # Kafka
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
