--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,13 @@ spring.application.name=Lotto
 spring.security.user.name=Lukasz
 spring.security.user.password=lukasz1234@@!!--mijakotako$%^&*
 
-spring.data.mongodb.uri=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@localhost:27017/lotto?authSource=admin
-
+spring.data.mongodb.username=lukasz
+spring.data.mongodb.password=lukasz123!$#
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
 
 lotto.jwt.secret=${JWT_SECRET}
-lotto.jwt.expiration-ms=${JWT_EXPIRATION_MS}
+lotto.jwt.expiration-ms=90000
 lotto.jwt.issuer=${JWT_ISSUER}
 lotto.jwt.subject=${JWT_SUBJECT}
 
