refactor application.properties - draw.date.time.nanosecond=0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ draw.date.time.day=6
 draw.date.time.hour=12
 draw.date.time.minute=0
 draw.date.time.second=0
+draw.date.time.nanosecond=0
 
 # Kafka
 spring.kafka.bootstrap-servers=localhost:9092
