--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,12 @@
-server.port=0
-
 spring.application.name=Lotto
-spring.security.user.name=Lukasz
-spring.security.user.password=lukasz1234@@!!--mijakotako$%^&*
-
-spring.data.mongodb.username=lukasz
-spring.data.mongodb.password=lukasz123!$#
+#MONGO
+spring.data.mongodb.username=${MONGO_USERNAME}
+spring.data.mongodb.password=${MONGO_PASSWORD}
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-
-lotto.jwt.secret=${JWT_SECRET}
-lotto.jwt.expiration-ms=90000
-lotto.jwt.issuer=${JWT_ISSUER}
-lotto.jwt.subject=${JWT_SUBJECT}
+#JWT
+token.secret-key=${JWT_SECRET}
+token.expiration-days=10
 
 lotto.draw.cron=0 * * * * *
 lotto.draw.min-number=1
