--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
+server.port=0
+
 spring.application.name=Lotto
 #MONGO
 spring.data.mongodb.username=${MONGO_USERNAME}
 spring.data.mongodb.password=${MONGO_PASSWORD}
+spring.data.mongodb.database=${MONGO_DATABASE}
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 #JWT
 token.secret-key=${JWT_SECRET}
 token.expiration-days=10
 
-lotto.draw.cron=0 * * * * *
-lotto.draw.min-number=1
-lotto.draw.max-number=99
-lotto.draw.count-numbers=40
-lotto.draw.count-down-seconds=5
-lotto.draw.delay-between-draw-numbers-millis=20
-
+random.number.cron=0 * * * * *
+random.number.min=1
+random.number.max=99
+random.number.count=7
 
 draw.date.time.day=6
 draw.date.time.hour=12
