Change application.properties with range numbers min and max.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,13 @@ spring.data.mongodb.port=27017
 token.secret-key=${JWT_SECRET}
 token.expiration-days=10
 
-random.number.cron=0 * * * * *
-random.number.min=1
-random.number.max=99
-random.number.count=7
+random.numbers.cron=0 * * * * *
+random.numbers.min=1
+random.numbers.max=99
+random.numbers.count=7
+
+ticket.numbers.min=1
+ticket.numbers.max=99
 
 draw.date.time.day=6
 draw.date.time.hour=12
