--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,12 +15,17 @@ random.numbers.cron=0 * * * * *
 random.numbers.min=1
 random.numbers.max=99
 random.numbers.count=5
+ticket.numbers.min=1
+ticket.numbers.max=99
 
 draw.date.time.day=6
 draw.date.time.hour=12
 draw.date.time.minute=0
 draw.date.time.second=0
 draw.date.time.nanosecond=0
+
+winning.min-hits=3
+winning.price-per-hit=340
 
 # Kafka
 spring.kafka.bootstrap-servers=localhost:9092
