--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,5 +44,20 @@ services:
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
 
+  wiremock:
+    image: wiremock/wiremock:3.3.1
+    container_name: wiremock_test
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./mappings:/home/wiremock/mappings
+      - ./__files:/home/wiremock/__files
+    command: --verbose
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/__admin/health" ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
 volumes:
   mongo_data:
