--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,17 +4,18 @@ spring.application.name=Lotto
 #MONGO
 spring.data.mongodb.username=${MONGO_USERNAME}
 spring.data.mongodb.password=${MONGO_PASSWORD}
-spring.data.mongodb.database=${MONGO_DATABASE}
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://localhost:27017/${MONGO_DATABASE}
 #JWT
 token.secret-key=${JWT_SECRET}
 token.expiration-days=10
 
 random.numbers.cron=0 * * * * *
 random.numbers.min=1
-random.numbers.max=50
+random.numbers.max=99
 random.numbers.count=6
+
+random.numbers.client.api-key=${RANDOM_NUMBERS_API_KEY}
+random.numbers.client.url=https://api.random.org/json-rpc/4/invoke
 
 ticket.numbers.min=1
 ticket.numbers.max=99
