--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,12 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
+#Email
+email.from=${EMAIL_FROM}
+email.to=${EMAIL_TO}
+email.subject=${EMAIL_SUBJECT}
+email.message=${EMAIL_MESSAGE}
+email.api-key=${EMAIL_API_KEY}
+
+
 
