Refactor application.properties and lottoApplication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.kafka.producer.value-serializer=org.springframework.kafka.support.seriali
 email.from=${EMAIL_FROM}
 email.to=${EMAIL_TO}
 email.subject=${EMAIL_SUBJECT}
-email.message=${EMAIL_MESSAGE}
+email.body=${EMAIL_MESSAGE}
 email.api-key=${EMAIL_API_KEY}
 
 
