--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,11 @@
             <artifactId>sendgrid-java</artifactId>
             <version>4.10.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>10.9.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
